[package]
name = "oxidized-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
colored = "2"
prettytable-rs = "0.10.0"
serde = "1.0.188"
serde_json = "1.0.105"

